@@ -1,3 +1,8 @@
+2011-09-20	The InnoDB Team
+
+	* row/row0purge.c:
+	Fix Bug#12963823 CRASH IN PURGE THREAD UNDER UNUSUAL CIRCUMSTANCES
+
 2011-09-12	The InnoDB Team
 
 	* row/row0sel.c:
